// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDefaultConfig creates a custom config 1`] = `
Object {
  "context": "/path/to/pkg/client/src",
  "devtool": "inline-source-map",
  "entry": Array [
    "@babel/polyfill",
    "./app.js",
    "./libs.js",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
      Object {
        "test": /\\\\\\.less\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
          },
          Object {
            "loader": "less-loader",
            "options": Object {
              "lessOptions": Object {
                "modifyVars": Object {
                  "primaryColor": "indigo",
                },
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "react-svg-loader",
            "options": Object {
              "svgo": Object {
                "floatPrecision": 2,
                "plugins": Array [
                  Object {
                    "removeTitle": false,
                  },
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "generator": Object {
          "filename": "[path][name].[contenthash].[ext]",
        },
        "test": /\\\\\\.jpe\\?g\\$\\|\\\\\\.gif\\$\\|\\\\\\.png\\$\\|\\\\\\.wav\\$\\|\\\\\\.mp3\\|\\\\\\.woff\\$\\|\\\\\\.woff2\\$\\|\\\\\\.otf\\$\\|\\\\\\.eot\\$\\|\\\\\\.ttf\\$/,
        "type": "asset",
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "terserOptions": Object {
            "ecma": 6,
          },
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "bundle.js",
    "path": "/path/to/pkg/build",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__GIT_COMMIT__": "abcdef",
        "__MODE__": "\\"development\\"",
        "__THEME__": "{\\"primaryColor\\":\\"indigo\\"}",
      },
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "template": "/path/to/pkg/src/index.html.ejs",
      },
      "version": 5,
    },
    LiveReloadPlugin {
      "defaultPort": 35729,
      "infrastructureLogger": null,
      "instanceId": "__DYNAMIC__",
      "isWebpack4": false,
      "lastChildHashes": Array [],
      "lastHash": null,
      "options": Object {
        "appendScriptTag": true,
        "delay": 0,
        "hostname": "\\" + location.hostname + \\"",
        "ignore": null,
        "port": 35729,
        "protocol": "",
        "quiet": false,
        "useSourceHash": false,
      },
      "server": null,
      "sourceHashs": Object {},
      "webpack": null,
    },
    Object {
      "custom": "webpack plugin",
    },
  ],
  "watch": true,
  "watchOptions": Object {
    "ignored": Array [
      "node_modules",
      "cypress",
      "/path/to/pkg/build/**/*",
    ],
  },
}
`;

exports[`createDefaultConfig creates default development config 1`] = `
Object {
  "context": "/path/to/pkg/src",
  "devtool": "inline-source-map",
  "entry": Array [
    "@babel/polyfill",
    "./index.js",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
      Object {
        "test": /\\\\\\.less\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
          },
          Object {
            "loader": "less-loader",
            "options": Object {
              "lessOptions": Object {},
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "react-svg-loader",
            "options": Object {
              "svgo": Object {
                "floatPrecision": 2,
                "plugins": Array [
                  Object {
                    "removeTitle": false,
                  },
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "generator": Object {
          "filename": "[path][name].[contenthash].[ext]",
        },
        "test": /\\\\\\.jpe\\?g\\$\\|\\\\\\.gif\\$\\|\\\\\\.png\\$\\|\\\\\\.wav\\$\\|\\\\\\.mp3\\|\\\\\\.woff\\$\\|\\\\\\.woff2\\$\\|\\\\\\.otf\\$\\|\\\\\\.eot\\$\\|\\\\\\.ttf\\$/,
        "type": "asset",
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "terserOptions": Object {
            "ecma": 6,
          },
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "bundle.js",
    "path": "/path/to/pkg/dist",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__GIT_COMMIT__": "abcdef",
        "__MODE__": "\\"development\\"",
      },
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "template": "/path/to/pkg/src/index.html.ejs",
      },
      "version": 5,
    },
    WebpackNotifierPlugin {
      "isFirstBuild": true,
      "lastBuildSucceeded": false,
      "options": Object {
        "alwaysNotify": true,
      },
    },
    LiveReloadPlugin {
      "defaultPort": 35729,
      "infrastructureLogger": null,
      "instanceId": "__DYNAMIC__",
      "isWebpack4": false,
      "lastChildHashes": Array [],
      "lastHash": null,
      "options": Object {
        "appendScriptTag": true,
        "delay": 0,
        "hostname": "\\" + location.hostname + \\"",
        "ignore": null,
        "port": 35729,
        "protocol": "",
        "quiet": false,
        "useSourceHash": false,
      },
      "server": null,
      "sourceHashs": Object {},
      "webpack": null,
    },
  ],
  "watch": true,
  "watchOptions": Object {
    "ignored": Array [
      "node_modules",
      "cypress",
      "/path/to/pkg/dist/**/*",
    ],
  },
}
`;

exports[`createDefaultConfig creates default production config 1`] = `
Object {
  "context": "/path/to/pkg/src",
  "devtool": undefined,
  "entry": Array [
    "@babel/polyfill",
    "./index.js",
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
      Object {
        "test": /\\\\\\.less\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
          },
          Object {
            "loader": "less-loader",
            "options": Object {
              "lessOptions": Object {},
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "react-svg-loader",
            "options": Object {
              "svgo": Object {
                "floatPrecision": 2,
                "plugins": Array [
                  Object {
                    "removeTitle": false,
                  },
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "generator": Object {
          "filename": "[path][name].[contenthash].[ext]",
        },
        "test": /\\\\\\.jpe\\?g\\$\\|\\\\\\.gif\\$\\|\\\\\\.png\\$\\|\\\\\\.wav\\$\\|\\\\\\.mp3\\|\\\\\\.woff\\$\\|\\\\\\.woff2\\$\\|\\\\\\.otf\\$\\|\\\\\\.eot\\$\\|\\\\\\.ttf\\$/,
        "type": "asset",
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "terserOptions": Object {
            "ecma": 6,
          },
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "bundle-[contenthash].js",
    "path": "/path/to/pkg/dist",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__GIT_COMMIT__": "abcdef",
        "__MODE__": "\\"production\\"",
      },
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "template": "/path/to/pkg/src/index.html.ejs",
      },
      "version": 5,
    },
    WebpackNotifierPlugin {
      "isFirstBuild": true,
      "lastBuildSucceeded": false,
      "options": Object {
        "alwaysNotify": true,
      },
    },
    CompressionPlugin {
      "algorithm": [Function],
      "options": Object {
        "algorithm": "gzip",
        "compressionOptions": Object {
          "level": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": undefined,
        "filename": "[path][base].gz",
        "include": undefined,
        "minRatio": 0.8,
        "test": undefined,
        "threshold": 0,
      },
    },
  ],
  "watch": false,
  "watchOptions": Object {
    "ignored": Array [
      "node_modules",
      "cypress",
      "/path/to/pkg/dist/**/*",
    ],
  },
}
`;
